27.10.2000
	- New sys-apps/hdparm-3.9-r2 (fix)	(drobbins)
	- Portage deps and merge fix		(drobbins)

26.10.2000

	- Update lopster 0.9.4 -> 0.9.5		(achim)
	- New app-emulators/wine 20001002	(achim)
	- Update kde 2.0_rc2 -> 2.0		(achim)
	
24.10.2000
	- Update portage-system to use python   (achim)
	  from /usr/lib/portage/bin
	- Update kde 1.94 -> 2.0_rc2		(achim)
	- Update qt-x11 2.2.0 -> 2.2.1		(achim)
	- New app-text/sharefonts 0.10		(achim)
	- New app-text/freefonts  0.10		(achim)

21.10.2000

	-Update ghostscript 6.23 r1 -> r2	(achim)
	 [Added stp-driver from gimp-print]

20.10.2000

	- Moved logrotate from sys-apps to app-admin	(achim)

19.10.2000

	- Update sys-devel/python-basic 	(drobbins)
	- Update dev-lang/python 		(drobbins)
  	  [ fchksum updates ]
	- New dev-db/berkley-db 3.1.17		(achim)
	- Removed app-text/docbook		(achim)
	- Removed app-text/dsssl		(achim)
	- New dev-perl/SGMLSpm 1.03ii		(achim)
	- New app-text/sgml-common 0.3		(achim)
	- New app-text/jadetex 2.20		(achim)
	- New app-text/docbook-utils 0.5.5	(achim)
	- New app-text/docbook-style-dsssl 1.57 (achim)
	- New app-text/docbook-dtd30-sgml 1.0   (achim)
	- New app-text/docbook-dtd31-sgml 1.0   (achim)
	- New app-text/docbook-dtd40-sgml 1.0   (achim)
	- New app-text/docbook-dtd41-sgml 1.0   (achim)
	- Update mysql 3.23.24 -> 3.23.26	(achim)

18.10.2000

	- New x11-terms/eterm 0.8.10		(achim)
	- New media-sound/nas 1.4.1		(achim)
	- New media-gfx/aview 1.2		(achim)
	- New media-libs/mpeg-lib 1.3.1		(achim)
	- New media-libs/aalib 1.2		(achim)
	- Update lilo 21.5.1 -> 21.6		(achim)
	- Update lftp 2.3.3 -> 2.3.4		(achim)
	- Update php 4.0.0_p1 -> 4.0.3p1	(achim)
	- Update apache-ssl -> 1.3.14.2.7.1	(achim)
	- Update gimp 1.1.27 > 1.1.28		(achim)

17.10.2000
	- Upgraded portage to 1.0-r3		(drobbins)
	  [ new pkgmerge .tbz2 installer ]
	- More major portage overhaul		(drobbins)
	  [moving merge/unmerge into portage.py
	   and first steps of pkgmerge .tbz2
	   installer]

14.10.200
