@@ -1,4 +1,5 @@
 27.10.2000
+	- New x11-wm/sawfish-0.32			(drobbins)
 	- New sys-apps/hdparm-3.9-r2 (fix)	(drobbins)
 	- Portage deps and merge fix		(drobbins)
 
